[gd_scene load_steps=67 format=2]

[ext_resource path="res://sprite/receive1.png" type="Texture" id=1]
[ext_resource path="res://sprite/idle.png" type="Texture" id=2]
[ext_resource path="res://sprite/jump_attack.png" type="Texture" id=3]
[ext_resource path="res://sprite/receive2.png" type="Texture" id=4]
[ext_resource path="res://sprite/jump_ready.png" type="Texture" id=5]
[ext_resource path="res://script/player_remake.gd" type="Script" id=6]
[ext_resource path="res://sprite/remake/idle.png" type="Texture" id=7]
[ext_resource path="res://sprite/remake/walk1.png" type="Texture" id=8]
[ext_resource path="res://sprite/remake/jump.png" type="Texture" id=9]
[ext_resource path="res://sprite/remake/walk2.png" type="Texture" id=10]
[ext_resource path="res://sprite/remake/walk3.png" type="Texture" id=11]
[ext_resource path="res://sprite/remake/attack0.png" type="Texture" id=12]
[ext_resource path="res://sprite/remake/fall.png" type="Texture" id=13]
[ext_resource path="res://sprite/remake/attack1-1.png" type="Texture" id=14]
[ext_resource path="res://sprite/remake/attack1.png" type="Texture" id=15]
[ext_resource path="res://sprite/remake/attack2.png" type="Texture" id=16]
[ext_resource path="res://sprite/remake/attack3-1.png" type="Texture" id=17]
[ext_resource path="res://sprite/remake/attack2-1.png" type="Texture" id=18]
[ext_resource path="res://sprite/remake/attack3.png" type="Texture" id=19]
[ext_resource path="res://sprite/remake/jump_attack1-1.png" type="Texture" id=20]
[ext_resource path="res://sprite/remake/jump_attack.png" type="Texture" id=21]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "ready",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ) ],
"loop": false,
"name": "receive",
"speed": 20.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 37, 46 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 26, 15.5 )

[sub_resource type="Animation" id=4]
resource_name = "hitted"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.498039 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 29, 2 )

[sub_resource type="CapsuleShape2D" id=7]
radius = 28.3911
height = 19.1307

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath("attack_zone/CollisionShape2D:shape")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ SubResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("attack_zone/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("attack_zone/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 58, -5 ) ]
}

[sub_resource type="CircleShape2D" id=9]
radius = 55.0091

[sub_resource type="Animation" id=10]
resource_name = "reset"
tracks/0/type = "value"
tracks/0/path = NodePath("attack_zone/CollisionShape2D:shape")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ SubResource( 9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("attack_zone/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("attack_zone/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "attack1"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.06, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 15 ), ExtResource( 14 ), ExtResource( 12 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "anim_finish"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:chain_attack")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.06, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=12]
resource_name = "attack2"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.06, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 16 ), ExtResource( 18 ), ExtResource( 12 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "anim_finish"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:chain_attack")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.06, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=13]
resource_name = "attack3"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.06, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 19 ), ExtResource( 17 ), ExtResource( 12 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "anim_finish"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:chain_attack")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=14]
resource_name = "fall"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 13 ) ]
}

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -62 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:chain_attack")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 9 ) ]
}

[sub_resource type="Animation" id=39]
resource_name = "jump_attack"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.06 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 21 ), ExtResource( 20 ) ]
}

[sub_resource type="Animation" id=17]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 8 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 11 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "attack1"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "attack2"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "attack3"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "fall"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "jump"

[sub_resource type="AnimationNodeAnimation" id=40]
animation = "jump_attack"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=27]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=28]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachineTransition" id=41]

[sub_resource type="AnimationNodeStateMachineTransition" id=42]

[sub_resource type="AnimationNodeStateMachineTransition" id=43]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=44]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=45]

[sub_resource type="AnimationNodeStateMachine" id=37]
states/attack1/node = SubResource( 18 )
states/attack1/position = Vector2( 127, 111 )
states/attack2/node = SubResource( 19 )
states/attack2/position = Vector2( 127, 247 )
states/attack3/node = SubResource( 20 )
states/attack3/position = Vector2( 127, 375 )
states/fall/node = SubResource( 21 )
states/fall/position = Vector2( 649, 321 )
states/idle/node = SubResource( 22 )
states/idle/position = Vector2( 420, 247 )
states/jump/node = SubResource( 23 )
states/jump/position = Vector2( 649, 169 )
states/jump_attack/node = SubResource( 40 )
states/jump_attack/position = Vector2( 867, 247 )
states/walk/node = SubResource( 24 )
states/walk/position = Vector2( 420, 111 )
transitions = [ "idle", "attack1", SubResource( 25 ), "attack3", "idle", SubResource( 26 ), "attack1", "idle", SubResource( 27 ), "attack2", "idle", SubResource( 28 ), "idle", "walk", SubResource( 29 ), "walk", "idle", SubResource( 30 ), "idle", "jump", SubResource( 31 ), "jump", "fall", SubResource( 32 ), "fall", "idle", SubResource( 33 ), "walk", "attack1", SubResource( 34 ), "attack1", "attack2", SubResource( 35 ), "attack2", "attack3", SubResource( 36 ), "jump", "jump_attack", SubResource( 41 ), "fall", "jump_attack", SubResource( 42 ), "jump_attack", "jump", SubResource( 43 ), "jump_attack", "fall", SubResource( 44 ), "jump_attack", "idle", SubResource( 45 ) ]
start_node = "idle"
graph_offset = Vector2( -72, 134.744 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=38]

[node name="player_body" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 6 )

[node name="sprite" type="AnimatedSprite" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -44 )
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "idle"
playing = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -62 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 2, 2 )
shape = SubResource( 2 )

[node name="attack_zone" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_zone"]
self_modulate = Color( 0, 1, 0.180392, 1 )
position = Vector2( 58, -5 )
scale = Vector2( 2, 2 )
shape = SubResource( 3 )

[node name="hitted_anim" type="AnimationPlayer" parent="."]
autoplay = "reset"
anims/hitted = SubResource( 4 )
anims/reset = SubResource( 5 )

[node name="Timer" type="Timer" parent="hitted_anim"]
wait_time = 2.0

[node name="floor_check" type="Area2D" parent="."]
visible = false
modulate = Color( 0, 0.0156863, 1, 1 )
position = Vector2( 0, 93 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="floor_check"]
shape = SubResource( 6 )

[node name="hit_zone" type="StaticBody2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_zone"]
self_modulate = Color( 0, 1, 0.180392, 1 )
scale = Vector2( 2, 2 )
shape = SubResource( 7 )

[node name="attack_shape_anim" type="AnimationPlayer" parent="."]
autoplay = "reset"
anims/punch1 = SubResource( 8 )
anims/reset = SubResource( 10 )

[node name="ball_arrow_indicator" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 100, 0 )

[node name="sprite_anim" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/attack1 = SubResource( 11 )
anims/attack2 = SubResource( 12 )
anims/attack3 = SubResource( 13 )
anims/fall = SubResource( 14 )
anims/idle = SubResource( 15 )
anims/jump = SubResource( 16 )
anims/jump_attack = SubResource( 39 )
anims/walk = SubResource( 17 )

[node name="sprite_anim_tree" type="AnimationTree" parent="."]
tree_root = SubResource( 37 )
anim_player = NodePath("../sprite_anim")
active = true
parameters/playback = SubResource( 38 )
[connection signal="area_entered" from="attack_zone" to="." method="attack_zone_in"]
[connection signal="area_exited" from="attack_zone" to="." method="attack_zone_out"]
[connection signal="timeout" from="hitted_anim/Timer" to="." method="hitted_timeout"]
[connection signal="body_entered" from="floor_check" to="." method="floor_check_in"]
[connection signal="body_exited" from="floor_check" to="." method="floor_check_out"]
